# rust-hadoop-generated-by-llm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUG_REPORT.md  CHAOS_TEST.md  CLAUDE.md  Cargo.toml  DYNAMIC_SHARDING.md  Dockerfile  Dockerfile.bench  MASTER_HA.md  README.md  REPLICATION.md  S3_COMPATIBILITY.md  TODO.md  UPGRADE_PLAN.md  benchmark_output.txt  build.rs  chaos_test.sh  chaos_test_sharded.sh  cluster_membership_test.sh  cross_shard_test.sh  docker-compose-sharded.yml  docker-compose.auto-scaling.yml  docker-compose.toxiproxy-sharded.yml  docker-compose.toxiproxy.yml  docker-compose.yml  downloaded.txt  fault_recovery_test.sh  ha_test.txt  raft_test.txt  refactor-instructions.md  rename_test.txt  run_all_tests.sh  rustfmt.toml  same_shard_rename_test.sh  shard_config.json  simple_chaos_test.sh  simple_test.txt  start_cluster.sh  (+1 more)
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
deploy/: DEPLOYMENT.md  RANCHER_DESKTOP_QUICKSTART.md
deploy/helm/rust-hadoop/: Chart.yaml  values.yaml
deploy/helm/rust-hadoop/templates/: _helpers.tpl  chunkserver-pdb.yaml  chunkserver.yaml  configmap.yaml  configserver-pdb.yaml  configserver.yaml  grafana-dashboard.yaml  metaserver-pdb.yaml  metaserver-shard2-pdb.yaml  metaserver-shard2.yaml  metaserver.yaml  monitoring.yaml  prometheus-rules-iam.yaml  s3server.yaml
dfs/: Cargo.toml  build.rs
dfs/chunkserver/: Cargo.toml  build.rs
dfs/chunkserver/benches/: io_bench.rs
dfs/chunkserver/src/: chunkserver.rs  io_uring_pool.rs  lib.rs
dfs/chunkserver/src/tests/: client_test.rs
dfs/client/: Cargo.toml
dfs/client/src/: checker.rs  mod.rs  sharding.rs  workload.rs
dfs/common/: Cargo.toml
dfs/common/src/: erasure.rs  lib.rs  security.rs  sharding.rs
dfs/common/src/auth/: audit.rs  bucket_policy.rs  cache.rs  chunked.rs  credentials.rs  encoding.rs  mod.rs  oidc.rs  policy.rs  presign.rs  signing.rs  sse.rs  sts.rs
dfs/metaserver/: Cargo.toml  build.rs  grafana_dashboard.json
dfs/metaserver/src/: config_server.rs  lib.rs  master.rs  raft_network.rs  raft_types.rs  sharding.rs  simple_raft.rs
dfs/metaserver/tests/: jepsen_style_tests.rs  membership_change_unit_tests.rs  network_partition_tests.rs  property_based_tests.proptest-regressions  property_based_tests.rs  raft_logic_tests.rs
dfs/s3_server/: Cargo.toml
dfs/s3_server/src/: audit.rs  auth_middleware.rs  handler_tests.rs  handlers.rs  iam_metrics.rs  main.rs  s3_types.rs  state.rs  sts_handler.rs
dfs/src/: lib.rs  raft_network.rs
docs/: advanced_audit_capabilities.md  audit_logging_design.md  auth_v4_spec.md  end_to_end_checksums_design.md  iam_credentials_design.md  iam_middleware_integration.md  iam_observability_design.md  iam_phase1_oidc.md  iam_phase2_sts.md  iam_phase3_policy_engine.md
docs/plans/: 2026-06-01-background-healer.md  2026-06-01-backup-recovery.md  2026-06-01-hedged-reads.md  2026-06-01-presigned-urls-design.md  2026-06-01-presigned-urls.md  2026-06-01-rack-awareness.md  2026-06-01-raft-optimizations.md  2026-06-02-erasure-coding-design.md  2026-06-02-erasure-coding-impl.md  2026-06-03-io-uring-adr.md  2026-06-03-io-uring-design.md  2026-06-03-io-uring-impl.md  2026-06-03-io-uring-pool-design.md  2026-06-03-io-uring-pool-impl.md  2026-06-03-storage-tiering.md  2026-06-04-bucket-policy.md  2026-06-04-sse.md
docs/superpowers/plans/: 2026-06-18-2pc-recovery-phase1.md  2026-06-19-linearizability-testing.md  2026-06-23-raft-batching.md
docs/superpowers/specs/: 2026-06-18-2pc-recovery-design.md  2026-06-19-linearizability-testing-design.md  2026-06-23-raft-batching-design.md
proto/: dfs.proto
src/: chunkserver.rs  config_server.rs  lib.rs  master.rs  raft_network.rs  raft_types.rs  sharding.rs  simple_raft.rs
src/client/: mod.rs
src/tests/: client_test.rs
test_scripts/: DYNAMIC_MEMBERSHIP_TESTS.md  NETWORK_PARTITION_TESTS.md  audit_log_test.sh  auto_scaling_test.sh  bucket_policy_test.sh  chaos_test.sh  chaos_test_sharded.sh  checksum_verification_test.py  cluster_membership_test.sh  cross_shard_test.sh  dynamic_membership_test.sh  erasure_coding_test.sh  fault_recovery_test.sh  generate_certs.sh  iam_credential_test.py  linearizability_test.sh  manual_tls_test.sh  mock_oidc.py  network_partition_test.sh  oidc_sts_test.sh  rename_test.sh  requirements.txt  run_checksum_test.sh  run_iam_credential_test.sh  run_s3_test.sh  s3_integration_test.py  same_shard_rename_test.sh  shard_split_migration_test.sh  simple_chaos_test.sh  sse_test.sh  tls_e2e_test.sh  transaction_abort_test.sh  transaction_recovery_test.sh
test_scripts/spark-s3-test/: docker-compose-oidc.yml  docker-compose.yml  iam_config.json  mock_oidc_server.py  reproduce_issue.py  run_spark_test.sh  run_spark_test_oidc.sh  spark_s3_test.py
