[package]
name = "rust-hadoop"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
bytes = "1.0"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json"] }
warp = { version = "0.4", features = ["server"] }
rand = "0.9"
rocksdb = "0.21"
crc32fast = "1.5.0"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.23.0"
