[package]
name = "rust-hadoop"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
bytes = "1.0"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
rand = "0.9"
rocksdb = "0.24"
crc32fast = "1.5"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.23"
