[package]
name = "dfs-chunkserver"
version = "0.1.0"
edition = "2021"

[lib]
name = "dfs_chunkserver"
path = "src/lib.rs"

[[bin]]
name = "chunkserver"
path = "src/bin/chunkserver.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls", "transport"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum = "0.8"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
bytes = "1.0"
fs2 = "0.4"

crc32fast = "1.5"
# Removed tonic-prost
uuid = { version = "1.11", features = ["v4"] }
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dfs-common = { path = "../common" }
dfs-client = { path = "../client" }
lru = "0.16"
prometheus = "0.14"


[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.23"
