[package]
name = "dfs-metaserver"
version = "0.1.0"
edition = "2021"

[lib]
name = "dfs_metaserver"
path = "src/lib.rs"

[[bin]]
name = "master"
path = "src/bin/master.rs"

[[bin]]
name = "config_server"
path = "src/bin/config_server.rs"


[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }

bytes = "1.0"
reqwest = { version = "0.13", features = ["json"] }
axum = "0.8"

tower-http = { version = "0.6", features = ["trace"] }
rand = "0.8"
rocksdb = "0.24"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dfs-common = { path = "../common" }


prometheus = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.23"
proptest = "1.6"
