[package]
name = "s3-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "normalize-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dfs-client = { path = "../client" }
bytes = "1.0"
chrono = "0.4"
headers = "0.4"
uuid = { version = "1.0", features = ["v4"] }
md-5 = "0.10"
hex = "0.4"
tempfile = "3"
percent-encoding = "2.3"
